deployment/mlflow/minio/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-minio
  template:
    metadata:
      labels:
        app: mlflow-minio
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      volumes:
      - name: mlflow-pvc-2
        persistentVolumeClaim:
          claimName: mlflow-pvc-2
      containers:
      - name: mlflow-minio
        image: minio/minio:RELEASE.2020-07-27T18-37-02Z
        imagePullPolicy: IfNotPresent #Always
        command: ["/bin/sh"]
        args: ["-c", "mkdir -p /data/mlflow  && /usr/bin/minio server /data"]
        volumeMounts:
        - name: mlflow-pvc-2
          mountPath: '/data'
        ports:
        - containerPort: 9000
